fix white space under nijveraar thumbnail

--- a/styles/nijveraars.module.scss
+++ b/styles/nijveraars.module.scss
@@ -35,6 +35,7 @@
       }
       img {
         width: 5em;
+        height: 100%;
         // border-radius: 50%;
         box-shadow: 0 0 5px rgba(0, 0, 0, 0.195);
         position: relative;
